# synthesizer_practice

./: .gitignore  README.md  TASKS.md  index.html  package.json  vercel.json
desktop/: CMakeLists.txt  README.md  TASKS.md
desktop/Source/: Descriptions.cpp  Descriptions.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
desktop/Source/dsp/: Delay.cpp  Delay.h  Drive.cpp  Drive.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  Noise.cpp  Noise.h  Oscillator.cpp  Oscillator.h  Reverb.cpp  Reverb.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
desktop/Source/ui/: AmpEnvelopePanel.cpp  AmpEnvelopePanel.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  DelayPanel.cpp  DelayPanel.h  DrivePanel.cpp  DrivePanel.h  FilterEnvelopePanel.cpp  FilterEnvelopePanel.h  FilterPanel.cpp  FilterPanel.h  InfoPanel.cpp  InfoPanel.h  LfoPanel.cpp  LfoPanel.h  MasterPanel.cpp  MasterPanel.h  NoisePanel.cpp  NoisePanel.h  OscillatorPanel.cpp  OscillatorPanel.h  ReverbPanel.cpp  ReverbPanel.h  RotaryKnob.cpp  RotaryKnob.h  SectionPanel.cpp  SectionPanel.h  SpectrumDisplay.cpp  SpectrumDisplay.h  VoicePanel.cpp  VoicePanel.h  WaveformDisplay.cpp  WaveformDisplay.h
docs/: desktop-design.md  desktop-plan.md
src/: App.tsx  types.ts
src/audio/: Drive.ts  Envelope.ts  Filter.ts  LFO.ts  Oscillator.ts  Reverb.ts  SynthEngine.ts
src/components/: Keyboard.tsx  Knob.tsx  PresetBrowser.tsx  SpectrumView.tsx  WaveformView.tsx
src/components/sections/: DelaySection.tsx  DriveSection.tsx  EnvelopeSection.tsx  FilterEnvelopeSection.tsx  FilterSection.tsx  LFOSection.tsx  MasterSection.tsx  NoiseSection.tsx  OscillatorSection.tsx  VoiceSection.tsx
src/data/: defaults.ts  descriptions.ts  presets.ts
src/styles/: global.css  knob.css
web/: README.md  package-lock.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  types.ts
web/src/audio/: Delay.ts  LFO.ts  Noise.ts  Oscillator.ts  SynthEngine.ts  engineContext.tsx
web/src/components/: HoverTooltip.tsx  InfoPanel.tsx  Keyboard.tsx
web/src/components/sections/: EnvelopeSection.tsx  OscillatorSection.tsx  ReverbSection.tsx
web/src/data/: descriptions.ts  presets.ts
